<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConBD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Nombre">Nombre</string>
    <string name="Telefono">Telefono</string>
    <string name="Insertar">Insertar</string>
    <string name="Ver">Ver</string>
    <string name="sqlvista">Base de Datos</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="buscar">Buscar</string>


</resources>
